--- a/birch-artifact-grid-item.html
+++ b/birch-artifact-grid-item.html
@@ -15,7 +15,6 @@
   <style include='fs-styles'></style>
   <link rel="import" type="css" href="birch-artifact-grid-item.css">
   <template>
-    <wc-i18n-src locale='[[lang]]' locale-dir='[[localeDir()]]' domain='birch-artifact-grid-item'></wc-i18n-src>
     <iron-ajax id="postTitle"
       url="[[ajaxBase]]/artifactmanager/artifacts/[[data.id]]"
       headers='[[authHeaders]]'
@@ -42,8 +41,7 @@
               <story-artifact image-url='[[data.thumbSquareUrl]]' description='[[data.description]]' title='[[data.title]]'></story-artifact>
             </template>
 
-            <wc-i18n key='birch-artifact-grid-item.not_tagged' provider value='{{_notTaggedText}}'></wc-i18n>
-            <i class='not-tagged-icon' hidden='[[!_is(data.photoTagCount, 0)]]' title='[[_notTaggedText]]'></i>
+            <i class='not-tagged-icon' hidden='[[!_is(data.photoTagCount, 0)]]' title='[[i18n("not_tagged")]]'></i>
             <i class='comment-icon' hidden='[[!data.commentCount]]'>[[data.commentCount]]</i>
           </div>
 
@@ -52,24 +50,23 @@
               <i class="exclamation-icon" hidden="[[!_titleError]]"></i>
               <a class$="[[_calculateTitleClass(_titleError)]]" href$='[[_href]]' on-tap="_titleLinkOverride" hidden='[[_hideTitle(data.title, _titleInputActive)]]'>[[data.title]]</a>
               <a href$='[[_href]]?focus=title' class="add-title-link" on-tap="_toggleAddTitleInput" hidden='[[_hideAddTitle(readOnly, data.title, data.contributorCisUserId, owner, _titleInputActive)]]'>
-                <i class='add-icon'></i><wc-i18n key='birch-artifact-grid-item.add_title' value={{_addTitle}}></wc-i18n>
+                <i class='add-icon'></i>[[i18n('add_title')]]
               </a>
               <input class="title-input" type="text" maxlength='140' hidden="[[!_titleInputActive]]" on-keydown="_handleEnterExitBlur" on-blur="_handleEnterExitBlur" placeholder$="[[_addTitle]]" />
             </div>
           </template>
           <!-- Contributor Name -->
-          <wc-i18n key='birch-artifact-grid-item.contributed_by' provider value='{{_contributedBy}}'></wc-i18n>
           <template is='dom-if' if='[[!_hideContributorName(view, showContributed, _titleInputActive)]]'>
             <div class="artifact-meta">
               <div class="title-2" title='[[data.title]]' on-tap="_stopProp">
                 <i class="exclamation-icon" hidden="[[!_titleError]]"></i>
                 <a class$="[[_calculateTitleClass(_titleError)]]" href$='[[_href]]' on-tap="_titleLinkOverride" hidden='[[_hideTitle(data.title, _titleInputActive)]]'>[[data.title]]</a>
                 <a href$='[[_href]]?focus=title' class="add-title-link" on-tap="_toggleAddTitleInput" hidden='[[_hideAddTitle(readOnly, data.title, data.contributorCisUserId, owner, _titleInputActive)]]'>
-                  <i class='add-icon'></i><wc-i18n key='birch-artifact-grid-item.add_title'></wc-i18n>
+                  <i class='add-icon'></i>[[i18n('add_title')]]
                 </a>
               </div>
               <div class="contributor" title='[[_getContributorName(data.*)]]' hidden='[[!_getContributorName(data.*)]]'>
-                <span>[[_translateContributor(_contributedBy)]]</span><span class='contributor-name' on-tap='_openContactCard'>[[_getContributorName(data.*)]]</span>
+                <span id='contributor-link' on-tap='_openContactCard'></span>
               </div>
             </div>
           </template>
@@ -77,9 +74,7 @@
           <!--Restricted-->
           <div class="restricted" hidden="[[!restricted]]" on-tap='_openInfoDialog'>
             <span class="restricted-message-wrapper">
-              <wc-i18n class='fs-h5' key='birch-artifact-grid-item.restricted'></wc-i18n>
-              <wc-i18n class='fs-h5' key='birch-artifact-grid-item.restricted_info' provider value='{{restrictedInfo}}'></wc-i18n>
-              <wc-i18n class='fs-h5' key='birch-artifact-grid-item.check_email' provider value='{{checkEmail}}'></wc-i18n>
+              [[i18n('restricted')]]
             </span>
             <span class="info-icon" hidden='[[!_showRestrictedIcon]]'></span>
           </div>
@@ -91,28 +86,28 @@
             <!--Uploading-->
             <div class="overlay layout horizontal center center-justified" hidden="[[!uploading]]" on-tap='_goToItem'>
               <div class='processing'>
-                <wc-i18n key='birch-artifact-grid-item.uploading'></wc-i18n>
+                [[i18n('uploading')]]
               </div>
             </div>
 
             <!--Processing-->
             <div class="overlay layout horizontal center center-justified" hidden="[[!processing]]" on-tap='_goToItem'>
               <div class='processing'>
-                <wc-i18n key='birch-artifact-grid-item.processing'></wc-i18n>
+                [[i18n('processing')]]
               </div>
             </div>
 
             <!--Error Processing-->
             <div class="error-processing overlay layout horizontal center center-justified" hidden="[[!processingFailed]]" on-tap='_goToItem'>
               <div class="error-text">
-                <wc-i18n key='birch-artifact-grid-item.processing_fail'></wc-i18n>
+                [[i18n('processing_fail')]]
               </div>
             </div>
 
             <!--Screening-->
             <div class="overlay layout horizontal center center-justified" hidden="[[!screening]]" on-tap='_goToItem'>
               <div class='processing '>
-                <wc-i18n class='fs-h5' key='birch-artifact-grid-item.screening'></wc-i18n>
+                [[i18n('screening')]]
               </div>
             </div>
           </template>
@@ -128,7 +123,7 @@
     is: 'birch-artifact-grid-item',
     behaviors: [
       OakAJAXBehavior,
-      WCI18nBehavior,
+      WCI18n(),
       OakI18nBehavior,
     ],
     properties: {
@@ -264,7 +259,8 @@
       }
     },
     observers: [
-      '_modifyState(data.*, showMessages)'
+      '_modifyState(data.*, showMessages)',
+      '_translateContributor(i18n, data.*)'
     ],
     listeners: {
       'artifact.tap': '_goToItem'
@@ -447,8 +443,11 @@
       var contactData = {'event': e, 'cisId': this.data.contributorCisUserId }
       this.fire('gallery-open-contact-card', contactData);
     },
-    _translateContributor: function(val) {
-      return (val && this.owner) ? val.replace('{0}', '') : '';
+    _translateContributor: function(i18n, data) {
+      if (!this.showContributed || !data || !data.value || !i18n || !i18n('contributed_by_link')) return;
+      var name = (data.value.ftUserInfo) ? data.value.ftUserInfo.contactName : data.value.contributorContactName;
+      var contributor = this.$$('#contributor-link');
+      if (contributor) contributor.innerHTML = i18n('contributed_by_link').replace('{0}', name);
     },
     _openInfoDialog: function(e) {
       e.stopPropagation();
@@ -456,8 +455,8 @@
       if (!this.showRestrictedInfo || this.owner !== this.data.contributorCisUserId) return;
       var data = {};
       data.translations = {};
-      data.translations.restrictedInfo = this.restrictedInfo;
-      data.translations.checkEmail = this.checkEmail;
+      data.translations.restrictedInfo = this.i18n('restricted_info');
+      data.translations.checkEmail = this.i18n('check_email');
       data.target = this.$$('.info-icon');
       this.fire('open-restricted-info', data);
     },
