Use on-click for contributor name (#73)

--- a/birch-artifact-grid-item.html
+++ b/birch-artifact-grid-item.html
@@ -74,7 +74,7 @@
                 </a>
               </div>
               <div class="contributor" title='[[_getContributorName(data.*)]]' hidden='[[!_getContributorName(data.*)]]'>
-                <span id='contributor-link' on-tap='_openContactCard'></span>
+                <span id='contributor-link' on-click='_openContactCard'></span>
               </div>
             </div>
           </template>
