--- a/test/tests.html
+++ b/test/tests.html
@@ -17,14 +17,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <script src="../../web-component-tester/browser.js"></script>
 
     <!-- Step 1: import the element to test -->
-    <link rel="import" href="../birch-artifact-grid-item.html">
+    <link rel="import" href="../fs-artifact-grid-item.html">
   </head>
   <body>
 
     <!-- You can use the document as a place to set up your fixtures. -->
     <test-fixture id="grid-item-fixture">
       <template>
-        <birch-artifact-grid-item></birch-artifact-grid-item>
+        <fs-artifact-grid-item></fs-artifact-grid-item>
       </template>
     </test-fixture>
 
@@ -36,7 +36,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     dataObj.standardStory = {"href":"./documents/7674953","category":"STORY","url":"https://beta.familysearch.org/patron/v2/TH-903-54976-6-2/dist.txt?ctx=ArtCtxPublic","thumbSquareUrl":"https://beta.familysearch.org/patron/v2/TH-903-57669-3-5/thumb200.jpg?ctx=ArtCtxPublic","title":"All About Josh Crowther","description":"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vestibulum porta massa. Nunc vestibulum imperdiet ipsum, eu varius turpis facilisis vel. Suspendisse maximus aliquet erat, a pretium","id":7674953,"uploadDatetime":1431361794000,"datesPlaces":null,"deepZoomLiteUrl":"https://beta.familysearch.org/dzpatron/v1/TH-903-54976-6-2/scale?width=800&ctx=ArtCtxPublic","screeningState":"APPROVED","originalFilename":"story.txt","photoTagCount":0, "contributorCisUserId":"A guy with a hat"};
 
 
-      suite('<birch-artifact-grid-item>', function() {
+      suite('<fs-artifact-grid-item>', function() {
         var el;
 
         setup(function() {
