--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
        match the folder name, add a src="&lt;main-component&gt;.html" attribute,
        where &lt;main-component&gt;.html" is a file that imports all of the
        components you want documented. -->
-  <iron-component-page src='birch-artifact-grid-item-preview.html' active='birch-artifact-grid-item'></iron-component-page>
+  <iron-component-page src='fs-artifact-grid-item-preview.html' active='fs-artifact-grid-item'></iron-component-page>
 
 </body>
 </html>
