--- a/fs-artifact-grid-item.html
+++ b/fs-artifact-grid-item.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../fs-card/fs-card.html">
 <link rel="import" href="../wc-i18n/wc-i18n.html">
 <link rel="import" href="../oak-i18n-behavior/oak-i18n-behavior.html">
 <link rel="import" href="audio-artifact/audio-artifact.html">
@@ -20,8 +21,8 @@
       method="POST"
       on-response="_handlePostTitleResponse"
       on-error="_handlePostTitleError"></iron-ajax>
-    <div class="fs-card">
-      <div class="fs-card__body">
+    <fs-card>
+      <div body>
         <div class="relative">
           <div id='artifact' class="artifact">
 
@@ -128,7 +129,7 @@
 
         </div>
       </div>
-    </div>
+    </fs-card>
   </template>
 </dom-module>
 <script>
