Add metrics for `Select Contributor Name`

--- a/fs-artifact-grid-item.html
+++ b/fs-artifact-grid-item.html
@@ -482,8 +482,9 @@
     },
     _openContactCard: function(e) {
       e.stopPropagation();
+      this.fireMetrics({link_name: 'Artifact: Select Contributor Name'});
       this.fire('gallery-close-contact-card',{});
-      var contactData = {'event': e, 'cisId': this.data.contributorCisUserId }
+      var contactData = {'event': e, 'cisId': this.data.contributorCisUserId };
       this.fire('gallery-open-contact-card', contactData);
     },
     _translateContributor: function(i18n, data) {
