--- a/fs-artifact-grid-item.html
+++ b/fs-artifact-grid-item.html
@@ -1,5 +1,4 @@
 <link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../fs-card-el/fs-card-el.html">
 <link rel="import" href="../wc-i18n/wc-i18n.html">
 <link rel="import" href="../oak-i18n-behavior/oak-i18n-behavior.html">
 <link rel="import" href="audio-artifact/audio-artifact.html">
@@ -22,8 +21,8 @@
       method="POST"
       on-response="_handlePostTitleResponse"
       on-error="_handlePostTitleError"></iron-ajax>
-    <fs-card-el>
-      <div body>
+    <div class="fs-card">
+      <div class="fs-card__body">
         <div class="relative">
           <div id='artifact' class="artifact">
 
@@ -130,7 +129,7 @@
 
         </div>
       </div>
-    </fs-card-el>
+    </div>
   </template>
 </dom-module>
 <script>
