--- a/fs-artifact-grid-item-preview.html
+++ b/fs-artifact-grid-item-preview.html
@@ -12,7 +12,7 @@
     <fs-artifact-grid-item data="[[data]]"></fs-artifact-grid-item>
     <div class="grid-item-preview-overlay">
       <div class="spinner" hidden="[[!loading]]"></div>
-      <div class="error-uploading full layout horizontal end" hidden="[[!data.uploadError]]">
+      <div class="error-uploading" hidden="[[!data.uploadError]]">
         <div class="error-text" hidden="[[!data.failure]]">
           <span>
             [[i18n('try_again')]]
