--- a/story-artifact/story-artifact.html
+++ b/story-artifact/story-artifact.html
@@ -1,10 +1,9 @@
 <link rel="import" href="../../polymer/polymer.html">
-<link rel="import" href="../../layout/layout.html">
 
 <dom-module id='story-artifact'>
   <link rel="import" type="css" href="styles.css">
   <template>
-    <div class="layout vertical">
+    <div>
       <h1 class="story-content-title">[[title]]</h1>
       <div class="story-content-body">
         <div class="story-content-body-overlay"></div>
