--- a/demo/index.html
+++ b/demo/index.html
@@ -17,6 +17,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <link rel="import" href="../fs-artifact-grid-item-preview.html" async>
   </head>
   <body unresolved>
+    <dom-bind>
     <template is='dom-bind'>
       <select class="" name="locale" value="{{locale::change}}">
         <option value="de">German</option>
@@ -38,11 +39,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <!-- Preview Item-->
       <fs-artifact-grid-item-preview language='[[locale]]' data='{"id":20524333,"apid":"TH-904-59400-312-51","url":"https://beta.familysearch.org/patron/v2/TH-904-59400-312-51/dist.jpg?ctx=ArtCtxPublic","title":"Crowther Kids enjoying the fall","uploadState":"UPLOADED","screeningState":"APPROVED","imageProcessingState":"PROCESSED","description":"","mimeType":"image/jpeg","originalFilename":"IMG_0268.JPG","photoTagCount":5,"commentCount":0,"contributorPatronId":556427,"category":"IMAGE","uploadDatetime":1447287013000,"size":553974,"thumbUrl":"https://beta.familysearch.org/patron/v2/TH-904-59400-312-51/thumb200.jpg?ctx=ArtCtxPublic","thumbSquareUrl":"https://beta.familysearch.org/patron/v2/TH-904-59400-312-51/thumb200s.jpg?ctx=ArtCtxPublic","thumbIconUrl":"https://beta.familysearch.org/patron/v2/TH-904-59400-312-51/thumb64.jpg?ctx=ArtCtxPublic","thumbMobileUrl":"https://beta.familysearch.org/patron/v2/TH-904-59400-312-51/thumbMobile.jpg?ctx=ArtCtxPublic","thumbTabletUrl":"https://beta.familysearch.org/patron/v2/TH-904-59400-312-51/dist.jpg?ctx=ArtCtxPublic","deepZoomUrl":"https://beta.familysearch.org/dzpatron/v1/TH-904-59400-312-51/image.xml","deepZoomLiteUrl":"https://beta.familysearch.org/dzpatron/v1/TH-904-59400-312-51/scale?width=800&ctx=ArtCtxPublic","photoTags":null,"associatedArtifacts":null,"width":1118,"height":1676,"dzWidth":800,"dzHeight":1199,"slug":"crowther-kids-enjoying-the-fall","visibility":"PUBLIC","visitCount":10,"softTagCount":0,"contentCategory":"PHOTO","structure":"SIMPLE","rotationAngle":0,"language":"en","seoIndexable":false,"contentCategories":["PHOTO","UNKNOWN"],"contributorCisUserId":"cis.user.MMM3-Z11V","features":"","hash":"52192850721c9126251b72daf4132af7","datesPlaces":null,"archived":false,"uploaderId":556427,"photoSoftTagCount":0,"first":true,"editableByCaller":true, "uploadError": true, "mp3Error": true}'></fs-artifact-grid-item-preview>
     </template>
+    </dom-bind>
     <div>
+      <dom-bind>
       <template id='upload' is='dom-bind'>
         <input id='file' type="file" files='{{files::change}}' value='{{value::input}}' on-change='_handleChange'>
         <div id='output'></div>
       </template>
+      </dom-bind>
     </div>
     <script>
       var app = document.querySelector('#upload');
