Allowing removal of tag icon in gallery import dialog
Also adding missing `hidden` CSS selector

--- a/fs-artifact-grid-item.html
+++ b/fs-artifact-grid-item.html
@@ -355,6 +355,9 @@
       .relative {
         position: relative;
       }
+      * [hidden] {
+        display: none !important;
+      }
     </style>
     <iron-ajax id="postTitle"
       url="[[ajaxBase]]/artifactmanager/artifacts/[[data.id]]"
@@ -389,7 +392,7 @@
             </template>
 
             <template is="dom-if" if="[[!data.tombstoned]]">
-              <i class='not-tagged-icon' hidden$='[[!_is(data.photoTagCount, 0)]]' title='[[i18n("not_tagged")]]'></i>
+              <i class='not-tagged-icon' hidden$='[[_hideTagIcon(data)]]' title='[[i18n("not_tagged")]]'></i>
               <i class='comment-icon' hidden$='[[!data.commentCount]]'>[[data.commentCount]]</i>
             </template>
           </div>
@@ -856,6 +859,13 @@
         this.fireMetrics({link_name: 'Artifact: Add Tag Icon'});
       }
       this.fireMetrics({link_name: 'Artifact: Click to View'});
+    },
+    _hideTagIcon(data){
+      if (this.selectMode) {
+        return true;
+      } else {
+        return this._is(data.photoTagCount, 0) ? false : true;
+      }
     }
   });
 })();
